<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">start</string>
    <string name="submit">submit</string>
    <string name="finish">finish</string>
    <string name="next">go to next question</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="result">Result</string>
    <string name="trophy">Trophy</string>
    <string name="congratulation">Hey, Congratulations!</string>
    <string name="zed">Zed</string>
    <string name="score">Your Score is %1$s out of %2$s</string>
</resources>
